--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width , initial-scale=1">
   <title>My First Web Page</title>
   <link href="style.css" rel="stylesheet">
 
